# opentowork

./: .\data\csvs\app_status.csv  .coveragerc  .gitignore  LICENSE  README.md  config.yml  data\csvs\app_status.csv  environment.yml  packages.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build_test.yml
csvs/: job_listings_['data analyst', 'data scientist', 'data engineer']_1_pages_scraped_2024-03-03 13:34:30.719897.csv  job_listings_['data analyst', 'data scientist', 'data engineer']_1_pages_scraped_2024-03-03 13_34_30.719897.csv  job_listings_data_analyst_30_jobs_scraped_20240307_004357.csv
data/: Indeed_Jobs.py  Job_Listing_Scraper.py  Linkedin_Jobs.py  indeed_jobs.py  job_listing_scraper.py  linkedin_jobs.py  sim_score_calculator.py
data/csvs/: job_listings_data_analyst_30_jobs_scraped_20240307_004357.csv  job_listings_data_analyst_data_scientist_data_engineer_30_jobs_scraped_20240312_183404.csv  job_listings_new.csv
doc/: component_design.md  functional_specification.markdown  milestones.md  use_cases.md  user_stories.md
examples/: README.md  scraper.md  streamlit_app.md
opentowork/: __init__.py  app.py  pyproject.toml  sim_score.py  sim_score_calculator.py  sim_score_calculator_new.py  skill_extraction.py
opentowork/pages/: __init__.py  home.py  job_recommendation.py
opentowork/scraper/: get_jobs.py  indeed_jobs.py  job_listing_scraper.py  linkedin_jobs.py
opentowork/test/: __init__.py  test_linkedin.py  test_scraper.py  test_skill_extraction.py
opentowork/tests/: __init__.py  test_get_jobs.py  test_helper.py  test_indeed.py  test_linkedin.py  test_scraper.py  test_sim_score.py  test_skill_extraction.py  test_streamlit.py
pages/: __init__.py  home.py  job_recommendation.py
pdfs/: random_ds_resume.docx
raw/: jz_skill_patterns.jsonl
