[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opentowork"
version = "0.0.1"
authors = [
  { name="Janice Kim", email="ymkim814@uw.edu" },
  { name="Nguyen Ha", email="nguyenbh@uw.edu" },
  { name="Kelly Wang", email="zwang28@uw.edu" },
  { name="Elaine Zhang", email="ezhang33@uw.edu" },
]
description = "Tool to optimize job searching by calculating a match score for uploaded resumes and job listings"
readme = "README.md"
requires-python = ">=3.9, <4.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["opentowork*"]
exclude = ["data*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/nguyenha1910/opentowork"

Issues = "https://github.com/nguyenha1910/opentowork/issues"